[package]
name = "rsonpath-lib"
version = "0.9.1"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
description = "Blazing fast JSONPath query engine powered by SIMD. Core library of `rsonpath`."
readme = "README.md"
license = "MIT"
keywords = ["json", "jsonpath", "query", "search", "simd"]
exclude = [
    "/tests",
    "/proptest-regressions",
    "/src/classification/classifier_correctness_tests.rs",
    "/src/classification/classifier_correctness_tests.proptest-regressions",
]
categories = ["text-processing"]
repository = "https://github.com/V0ldek/rsonpath"
homepage = "https://v0ldek.github.io/rsonpath/"
edition = "2021"
rust-version = "1.67.1"

[lib]
bench = false
name = "rsonpath"

[[bin]]
# Added by Ricardo
name = "lut"
path = "src/lut_main.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
arbitrary = { version = "1.3.1", features = ["derive"], optional = true }
cfg-if = "1.0.0"
log = "0.4.21"
memmap2 = "0.9.4"
nom = "7.1.3"
rsonpath-syntax = { version = "0.3.1", path = "../rsonpath-syntax" }
smallvec = { version = "1.13.1", features = ["union"] }
static_assertions = "1.1.0"
thiserror = "1.0.58"
vector-map = "1.0.1"

# Added by Ricardo
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0"}
serde_cbor = "0.11.2" # for saving lookup-tables in the cbor format. Warning: PROJECT IS ARCHIVED
ph = "0.8.3" # for perfect hashing
csv = "1.3.0"
stats_alloc = "0.1.10" # for measuring heap size of runtime datastructures such as the lookup-table
rand = { version = "0.8", default-features = false, features = ["small_rng"] } # for randomizing the hashfunctions of the lookup-tables
siphasher = "1.0" # for the phf_crate code
clap = { version = "4.5.20", features = ["derive"]}

[dev-dependencies]
itertools = "0.12.1"
pretty_assertions = "1.4.0"
proptest = "1.4.0"
test-case = "3.3.1"

[features]
default = ["simd"]
arbitrary = ["dep:arbitrary"]
simd = []

[[example]]
name = "approx_spans_usage"
path = "examples/approx_spans_usage.rs"
doc-scrape-examples = true
